{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 52,
  "lineage": "4107a32a-69f2-33c2-ccbb-cb8ab56b2ffe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b1ddd35fd71475a",
            "arn": "arn:aws:ec2:ap-south-1:454121900631:instance/i-01d2bf253c8446814",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01d2bf253c8446814",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "First Keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0874bcf1517cf09c7",
            "private_dns": "ip-10-0-123-17.ap-south-1.compute.internal",
            "private_ip": "10.0.123.17",
            "public_dns": "ec2-3-109-216-171.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.216.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c96a1d27b7dce584",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-093a2eff0b6fd3873",
            "tags": {
              "Name": "ec2-terraform-testing-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-085bf961c3b15f5af"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "module.security_groups.aws_security_group.instance_access",
            "module.vpc_and_subnet.aws_subnet.my_subnet",
            "module.vpc_and_subnet.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b1ddd35fd71475a",
            "arn": "arn:aws:ec2:ap-south-1:454121900631:instance/i-087cc78486c6f7788",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-087cc78486c6f7788",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "First Keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cf77418eecf8c01d",
            "private_dns": "ip-10-0-123-15.ap-south-1.compute.internal",
            "private_ip": "10.0.123.15",
            "public_dns": "ec2-3-110-32-43.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.32.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0224e3d5fc62b26c1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-093a2eff0b6fd3873",
            "tags": {
              "Name": "ec2-terraform-testing-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-085bf961c3b15f5af"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "module.security_groups.aws_security_group.instance_access",
            "module.vpc_and_subnet.aws_subnet.my_subnet",
            "module.vpc_and_subnet.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b1ddd35fd71475a",
            "arn": "arn:aws:ec2:ap-south-1:454121900631:instance/i-030adbc54cff42506",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030adbc54cff42506",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "First Keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e82b485661ae53e4",
            "private_dns": "ip-10-0-123-30.ap-south-1.compute.internal",
            "private_ip": "10.0.123.30",
            "public_dns": "ec2-65-0-100-46.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.100.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05e225067638e25e5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-093a2eff0b6fd3873",
            "tags": {
              "Name": "ec2-terraform-testing-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-085bf961c3b15f5af"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "module.security_groups.aws_security_group.instance_access",
            "module.vpc_and_subnet.aws_subnet.my_subnet",
            "module.vpc_and_subnet.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:454121900631:security-group/sg-085bf961c3b15f5af",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-085bf961c3b15f5af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0af6e52cbcd04ffda"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_instance_access",
            "name_prefix": "",
            "owner_id": "454121900631",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-055259357bf262956"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_and_subnet.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:454121900631:security-group/sg-0af6e52cbcd04ffda",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0af6e52cbcd04ffda",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_loadbalancer",
            "name_prefix": "",
            "owner_id": "454121900631",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-055259357bf262956"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_and_subnet.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dns_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 53,
            "id": "sgrule-838515267",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-085bf961c3b15f5af",
            "self": false,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.instance_access",
            "module.vpc_and_subnet.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1018636995",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-085bf961c3b15f5af",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.instance_access",
            "module.vpc_and_subnet.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2119543599",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0af6e52cbcd04ffda",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.lb_sg",
            "module.vpc_and_subnet.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-3255494353",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-085bf961c3b15f5af",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.instance_access",
            "module.vpc_and_subnet.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-4114308778",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0af6e52cbcd04ffda",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.lb_sg",
            "module.vpc_and_subnet.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3786005122",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-085bf961c3b15f5af",
            "self": false,
            "source_security_group_id": "sg-0af6e52cbcd04ffda",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.instance_access",
            "module.security_groups.aws_security_group.lb_sg",
            "module.vpc_and_subnet.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-920214209",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-085bf961c3b15f5af",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.instance_access",
            "module.vpc_and_subnet.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_and_subnet",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:454121900631:internet-gateway/igw-0d70bc337b9da790b",
            "id": "igw-0d70bc337b9da790b",
            "owner_id": "454121900631",
            "vpc_id": "vpc-055259357bf262956"
          },
          "dependencies": [
            "module.vpc_and_subnet.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_and_subnet",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "my_network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:454121900631:network-acl/acl-0ce30358ed232c904",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 99,
                "to_port": 0
              }
            ],
            "id": "acl-0ce30358ed232c904",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 99,
                "to_port": 0
              }
            ],
            "owner_id": "454121900631",
            "subnet_ids": [
              "subnet-093a2eff0b6fd3873"
            ],
            "tags": {},
            "vpc_id": "vpc-055259357bf262956"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_and_subnet.aws_subnet.my_subnet",
            "module.vpc_and_subnet.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_and_subnet",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1431729312",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0ce30358ed232c904",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 99,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_and_subnet.aws_network_acl.my_network_acl",
            "module.vpc_and_subnet.aws_subnet.my_subnet",
            "module.vpc_and_subnet.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_and_subnet",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_all_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4122112289",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0ce30358ed232c904",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 99,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_and_subnet.aws_network_acl.my_network_acl",
            "module.vpc_and_subnet.aws_subnet.my_subnet",
            "module.vpc_and_subnet.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_and_subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-038983e3d7b0ba4c4",
            "owner_id": "454121900631",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d70bc337b9da790b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-055259357bf262956"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_and_subnet.aws_internet_gateway.my_internet_gateway",
            "module.vpc_and_subnet.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_and_subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gateway_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092c640185dd9d949",
            "route_table_id": "rtb-038983e3d7b0ba4c4",
            "subnet_id": "subnet-093a2eff0b6fd3873"
          },
          "dependencies": [
            "module.vpc_and_subnet.aws_internet_gateway.my_internet_gateway",
            "module.vpc_and_subnet.aws_route_table.my_route_table",
            "module.vpc_and_subnet.aws_subnet.my_subnet",
            "module.vpc_and_subnet.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_and_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:454121900631:subnet/subnet-093a2eff0b6fd3873",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.123.0/27",
            "id": "subnet-093a2eff0b6fd3873",
            "map_public_ip_on_launch": true,
            "owner_id": "454121900631",
            "vpc_id": "vpc-055259357bf262956"
          },
          "dependencies": [
            "module.vpc_and_subnet.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_and_subnet",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:454121900631:vpc/vpc-055259357bf262956",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aa460eeadb2da6c9",
            "default_route_table_id": "rtb-038983e3d7b0ba4c4",
            "default_security_group_id": "sg-038c31be75c4283f6",
            "dhcp_options_id": "dopt-706ea71b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-055259357bf262956",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-038983e3d7b0ba4c4",
            "owner_id": "454121900631"
          }
        }
      ]
    }
  ]
}